Fixed overflowing property

--- a/webapp/src/main/webapp/themes/tenderfoot_uos/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot_uos/css/tenderfoot.css
@@ -683,3 +683,6 @@ ul.individual-urls-uos > ul {
         display: block;
     }
 }
+.tab-content > .tab-pane {
+    word-break: break-all;
+}
